# pytest-xdist

./: pyproject.toml  requirements.txt  setup.py
changelog/: 402.bugfix.rst
src/xdist/: __init__.py  dsession.py  newhooks.py  plugin.py  remote.py  workermanage.py
src/xdist/scheduler/: loadscope.py
