
[project]
name = "pytest-xdist"
version = "1.0.0"
description = "clone of xdist"
authors = [
    {name = "Kurt Godwin", email = "kgodwin@itron.com"},
]
dependencies = [
"execnet>=1.1",
"pytest>=6.2.0",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "UNLICENSED"}


[project.entry-points.pytest11]
pytest11 = "xdist.plugin"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/xdist/_version.py"
